crates/alder-codegen/src/snapshots/alder_codegen__tests__enum_representation.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub enum Shape { Point, Circle(Number), Rect { width: Number, height: Number } }"
---
import { $equalDerived } from "alder:kernel";
const $dict$Eq$0 = {};
$dict$Eq$0["eq"] = ($a0, $a1) => {
	return $equalDerived($a0, $a1, {
		"Point": {
			"record": false,
			"fields": [],
			"dictionaries": []
		},
		"Circle": {
			"record": false,
			"fields": ["_0"],
			"dictionaries": [undefined]
		},
		"Rect": {
			"record": true,
			"fields": ["width", "height"],
			"dictionaries": [undefined, undefined]
		}
	}, "alder://app/main.mjs::Shape");
};
Object["freeze"]($dict$Eq$0);
const $c_Shape_Point = Object["freeze"]({ "$": "Point" });
function $c_Shape_Circle($a0) {
	return {
		"$": "Circle",
		"_0": $a0
	};
}
function $c_Shape_Rect(width, height) {
	return {
		"$": "Rect",
		"width": width,
		"height": height
	};
}
export { $c_Shape_Circle, $c_Shape_Point, $c_Shape_Rect, $dict$Eq$0 };
