crates/alder-codegen/src/snapshots/alder_codegen__tests__error_groups_emit_no_nominal_dictionaries.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub error Failure { :later, :first(Number) }\n"
---

