crates/alder-codegen/src/snapshots/alder_codegen__tests__explicit_async_without_await_is_lazy.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub async fn answer() Number { 42 }"
---
import { $task } from "alder:kernel";
function $v_answer() {
	return $task(function* () {
		return 42;
	});
}
export { $v_answer as answer };
