crates/alder-codegen/src/snapshots/alder_codegen__tests__function_and_block_lifting.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub fn answer() {\n    let x = 40\n    x + 2\n}\n"
---
function $v_answer() {
	const $t0 = 40;
	let $l0_x = $t0;
	const $t1 = $l0_x;
	return $t1 + 2;
}
export { $v_answer as answer };
